--- a/site1/src/pages/cadastro/index.scss
+++ b/site1/src/pages/cadastro/index.scss
@@ -15,8 +15,8 @@
     }
     
     .logo{
-        margin-top: 15px;
-        height: 8em;
+        margin-top: 1em;
+        margin-left: 5em;
     }
     
     .menu-right{
@@ -55,7 +55,7 @@
     
     .subt1{
         color: #ffffff;
-        font-size: 2em;
+        font-size: 1.5em;
         margin: 0.5em;
     }
     
