--- a/site1/src/pages/controle/index.scss
+++ b/site1/src/pages/controle/index.scss
@@ -14,8 +14,8 @@
     } 
     
     .logo{
-       margin-top: 15px;
-        height: 8em;
+        margin-top: 1em;
+        margin-left: 5em;
     }
     
     .menu-right{
@@ -58,7 +58,7 @@
     
     hr{
         color: #BABABA;
-        width: 84em;
+        width: 100%;
     }
     
     .top-control{
@@ -75,7 +75,7 @@
         color: #ffffff;
         margin: 0.5em;
         margin-right: 1em;
-        font-size: 2em;
+        font-size: 1.5em;
     }
     
     .text1{
@@ -93,7 +93,7 @@
     button{
         background-color: #c4c4c4;
         border: 3px solid #ffffff;
-        font-size: 1.5em;
+        font-size: 1.2em;
         border-radius: 1em;
         width: 5em;
         height: 2em;
