--- a/site1/src/pages/admin/index.scss
+++ b/site1/src/pages/admin/index.scss
@@ -13,16 +13,16 @@ $url: 'http://localhost:3000';
     //arrumar tamanho
     .background2{
         background-size: 100%;
-        height: 100vh;
+        height: 50em;
         background-repeat: no-repeat;
         background-image: url($url + "/Images/imgadm.jpg");
         padding-top: 5em;
-        width: 100vh;
+
     }
     
     .logo{
-        margin-top: 15px;
-        height: 6em;
+        margin-top: 1em;
+        margin-left: 5em;
     }
     
     .user{
@@ -43,9 +43,13 @@ $url: 'http://localhost:3000';
     .box{
         width: 40em ;
         height: 2em;
+        font-size: 1em;
         background-color: inherit;
-        border: 1px;
         color: #ffff;
+        box-shadow: 0 0 0 0;
+        border: 0 none;
+        outline: 0;
+        margin-left: 1em;
     }
     
     .button{
@@ -59,6 +63,13 @@ $url: 'http://localhost:3000';
         margin-left: 2em;
         padding: 10px;
         border-radius: 0.5em;
+    }
+
+    @media(max-width: 1024px){
+        .background2{
+            width: 100%;
+            height: 100vh;
+        }
     }
 
 }
