--- a/site1/src/pages/admin/index.scss
+++ b/site1/src/pages/admin/index.scss
@@ -21,7 +21,7 @@ $url: 'http://localhost:3000';
     }
     
     .logo{
-        margin-top: 1em;
+        margin-top: 14pxm;
         margin-left: 5em;
     }
     
