--- a/site1/src/index.scss
+++ b/site1/src/index.scss
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*{
+  box-sizing: border-box;
+  margin: 0px;
+  border: px solid greenyellow;
+}
+
+a, a:link, a:visited a:active{
+  text-decoration: none;
+  display: inline-block;
+  color: inherit;
+}
