--- a/site1/src/pages/geral/index.scss
+++ b/site1/src/pages/geral/index.scss
@@ -45,9 +45,13 @@
     }
     
     .input-date-header{
-        width: 15em;
-        height: 2em;
+        width: 35em;
+        height: 3em;
         background-color: #BABABA;
+    }
+
+    .icon-busca{
+        
     }
     
     .main-header > hr{
