--- a/site1/src/pages/geral/index.scss
+++ b/site1/src/pages/geral/index.scss
@@ -50,8 +50,8 @@
         background-color: #BABABA;
     }
 
-    .icon-busca{
-        
+    .icon-busca:hover{
+         width: 1.7em;
     }
     
     .main-header > hr{
@@ -112,6 +112,10 @@
         height: 10em;
     }
     
+    .pesquisa{
+        display: flex;
+        flex-direction: row;
+    }
     hr{
         color: #BABABA;
         width: 100%;
